--- a/templates/citizen_action/show.html.twig
+++ b/templates/citizen_action/show.html.twig
@@ -43,7 +43,7 @@
         <section class="b__nudge--top-40">
             <div id="members">
                 {% if is_administrator and citizen_action.active %}
-                    <div class="b__nudge--bottom">
+                    <div class="b__nudge--bottom flex--center--mobile">
                         <a href="{{ path('app_citizen_action_manager_edit', { slug: citizen_action.slug, project_slug: citizen_action.citizenProject.slug }) }}" class="text--body link--blue link--padding link--no-decor">
                             Modifier cette action citoyenne
                         </a>
