--- a/templates/citizen_project/edit.html.twig
+++ b/templates/citizen_project/edit.html.twig
@@ -42,11 +42,11 @@
             {{ form_start(form, {attr: {id: 'edit-citizen-project-form', class: 'form citizen-project-form b__nudge--bottom-huge'}}) }}
                 {{ include('citizen_project/_form.html.twig', {citizen_project: citizen_project}) }}
                 {% if form.cgu is defined %}
-                    <div class="form__new form__new__checkbox">
+                    <div class="form__checkbox form__checkbox--large">
                         <div>
                             {{ form_widget(form.cgu) }}
                             {% block _form_cgu_label %}
-                                <label class="form form__label" for="citizen_project_cgu">
+                                <label class="form" for="citizen_project_cgu">
                                     <span>
                                         Je consens au traitement de mes données dans le cadre des Projets citoyens et à la communication de mes coordonnées (téléphone et e-mail) à l'équipe Engagement Citoyen au niveau départemental et national.
                                     </span>
@@ -56,18 +56,18 @@
                         {{ form_errors(form.cgu) }}
                     </div>
                 {% endif %}
-
                 {% if form.data_processing is defined %}
-                    <div class="form__new form__new__checkbox">
+                    <div class="form__checkbox form__checkbox--large">
                         <div>
                             {{ form_widget(form.data_processing) }}
                             {% block _form_data_processing_label %}
-                                <label class="form form__label" for="citizen_project_data_processing"><span>J’adhère aux <a href="https://storage.googleapis.com/en-marche-prod/documents/projets-citoyens/CGU%20-%20Projets%20Citoyens.pdf" target="_blank" class="link--blue">Conditions Générales d’Utilisation des Projets citoyens</a> et à la <a href="https://storage.googleapis.com/en-marche-prod/documents/projets-citoyens/La%20Charte%20des%20Projets%20Citoyens.pdf" target="_blank" class="link--blue">Charte des Projets citoyens</a></span></label>
+                                <label class="form" for="citizen_project_data_processing"><span>J’adhère aux <a href="https://storage.googleapis.com/en-marche-prod/documents/projets-citoyens/CGU%20-%20Projets%20Citoyens.pdf" target="_blank" class="link--blue">Conditions Générales d’Utilisation des Projets citoyens</a> et à la <a href="https://storage.googleapis.com/en-marche-prod/documents/projets-citoyens/La%20Charte%20des%20Projets%20Citoyens.pdf" target="_blank" class="link--blue">Charte des Projets citoyens</a></span></label>
                             {% endblock %}
                         </div>
                         {{ form_errors(form.data_processing) }}
                     </div>
                 {% endif %}
+                <hr>
                 <button type="submit" id="edit-citizen-project" class="btn btn--blue">
                     Enregistrer
                 </button>
