--- a/templates/citizen_project/show.html.twig
+++ b/templates/citizen_project/show.html.twig
@@ -18,7 +18,7 @@
                 </li>
 
                 <li>
-                    <a class="newbtn newbtn--small"
+                    <a class="newbtn--small btn--blue"
                        href="{{ path('app_citizen_action_attend', {slug: action.slug}) }}">
                         S'inscrire
                     </a>
