--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -100,6 +100,7 @@
 
         {% block stylesheets '' %}
         {% block final_stylesheets '' %}
+        {% block head_javascripts '' %}
     </head>
     <body>
         {% if app.environment == 'prod' %}
